--- a/Lekcia6/priklad_get.html
+++ b/Lekcia6/priklad_get.html
@@ -8,9 +8,9 @@
 <body>
     
     <form action="https://giganci.cytr.us" method="POST">
-        <input name="imie" type="text">
+        <input name="meno" type="text">
         </br>
-        <input type="submit" value="wyslij">
+        <input type="submit" value="odošli">
 
     </form>
 
